Update CLAUDE.md to reflect Paper API + JUnit 5 + MockBukkit migration
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>